--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "augmentation-ts",
   "version": "0.1.0",
   "private": true,
-  "main": "electron.js",
+  "main": "public/electron.js",
   "dependencies": {
+    "@catppuccin/palette": "^1.7.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -27,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package": "electron-builder",
-    "electron": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\" \"cd api && npm start\""
   },
   "eslintConfig": {
     "extends": [
