--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "concurrently": "^9.1.2",
-    "cross-env": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "wait-on": "^8.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "fetch-retry": "^6.0.0",
+    "json2toml": "^6.1.1",
+    "toml": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,7 +34,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package": "electron-builder",
-    "electron": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\" \"cd api && npm start\""
+    "api": "node ./api/app.js",
+    "electron": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "dist": "react-scripts build ; sed -i 's|=\"/|=\"|g' ./build/index.html ; cp -r api build ; npm run package"
   },
   "eslintConfig": {
     "extends": [
@@ -53,7 +57,11 @@
     ]
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.6",
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "electron": "^34.3.0",
-    "electron-builder": "^25.1.8"
+    "electron-builder": "^25.1.8",
+    "wait-on": "^8.0.2"
   }
 }
