--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,14 @@ jobs:
       - name: Build ReactJS
         run: npm run build
 
-      - name: Fix ReactJS build
-        run: |
-          sed -i 's|=\"/|=\"|g' ./build/index.html
-          cp -r api build
+      - name: Fix Path issues in Index.html
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "=\"/"
+          replace: "=\""
+
+      - name: Copy API to build
+        run: cp -r api build
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
