--- a/package.json
+++ b/package.json
@@ -21,12 +21,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "fetch-retry": "^6.0.0",
-    "json2toml": "^6.1.1",
-    "toml": "^3.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,9 +29,13 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package": "electron-builder",
+    "package:win": "electron-builder -w",
+    "package:wl": "electron-builder -wl",
     "api": "node ./api/app.js",
     "electron": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
-    "dist": "react-scripts build ; sed -i 's|=\"/|=\"|g' ./build/index.html ; cp -r api build ; npm run package"
+    "dist": "react-scripts build ; sed -i 's|=\"/|=\"|g' ./build/index.html ; cp -r api build ; npm run package:wl",
+    "clean": "rm -rf ./build ./dist",
+    "install:all": "npm i ; cd api ; npm i"
   },
   "eslintConfig": {
     "extends": [
@@ -63,5 +62,10 @@
     "electron": "^34.3.0",
     "electron-builder": "^25.1.8",
     "wait-on": "^8.0.2"
+  },
+  "build": {
+      "extraResources": [
+          "api"
+      ]
   }
 }
