--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,20 +10,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Set up JDK 24 for x64
+      - name: Set up JDK 25 for x64
         uses: actions/setup-java@v4
         with:
-          java-version: '24'
+          java-version: '25'
           distribution: 'temurin'
           architecture: x64
 
       - name: Build App (Maven)
-        run: |
-          sudo chmod +x build.sh
-          ./build.sh
+        run: mvn clean package
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
         if: github.ref_type == 'tag'
         with:
-          files: augmentation.jar
+          files: augmentation*.jar
